---------------------
phpFlickr - Changelog
---------------------

Version 2.3.0
-------------

2008-11-26 Dan Coulter  <dancoulter@users.sourceforge.net>
    * phpFlickr.php: Added new methods to keep up to date
		with the API.
	
	
Version 2.2.0
-------------

2008-01-17 Dan Coulter  <dancoulter@users.sourceforge.net>
    * phpFlickr.php: Added the preference, safety, content
		and "places" methods.
	* other files: Updated PEAR and HTTP_Request.

	
Version 2.1.0
-------------

2006-11-21 Dan Coulter  <dancoulter@users.sourceforge.net>
    * phpFlickr.php: Updated the buildPhotoURL method to 
      reflect recent changes in the Flickr API.  Also added the 
      photos_getFavorites method and added pagination arguments 
      to photosets_getPhotos..
    
2006-11-21 Dan Coulter  <dancoulter@users.sourceforge.net>
    * phpFlickr.php: Added the activity methods.
        
2006-10-18 Dan Coulter  <dancoulter@users.sourceforge.net>
    * phpFlickr.php: Added the tags_getHotList method.
        
        
Version 2.0.0
-------------

2006-09-29 Dan Coulter  <dancoulter@users.sourceforge.net>
    IMPORTANT: This version will not be 100% backwards compatible.
        It may very well break older apps if you try to copy it over
        an older version of phpFlickr.  Be sure you test thoroughly.

    * phpFlickr.php: Updated class to use Flickr's Serialized PHP 
        format.  Also, I revamped the error handling and caching.
        Fixed a bug in file uploading.
    * xml.php: Deleted.
    * xml_SAXY_parser.php: Deleted.


Version 1.6.1
-------------

2006-09-01 Dan Coulter  <dancoulter@users.sourceforge.net>
    * phpFlickr.php: Changed the license to the LGPL and
        implemented my friendly geodata service.


Version 1.6
-----------

2006-08-29 Dan Coulter  <dancoulter@users.sourceforge.net>
    * phpFlickr.php: Implemented the new comment and geocoding
        API methods.

2006-08-04 Dan Coulter  <dancoulter@users.sourceforge.net>